Fix create emailtemplate with purpose
